# dawg

./: .editorconfig  .gitignore  .travis.yml  ANALYSIS_DAWG_PYTHON.md  AUTHORS  CMakeLists.txt  ChangeLog  Dawg_Python_Analysis.md  Makefile  Makefile.am  Makefile.in  NEWS  README  acinclude.m4  aclocal.m4  analyze_wrappers.sh  autogen.sh  build.sh  changelog.txt  config.h  config.h.in  config.status  configure  configure.ac  configure.in  dawg.sln  dawg.sublime-project.in  dawg.txt  dawg_diff.sh  diff_py_wrappers.sh  diff_wrappers.sh  input.yaml  lambda.pl  meson.build  news.txt  nexus2fasta.pl  out1.poo  outsplit.pl  postflight.sh.in  readme.txt  (+1 more)
Modules/: CMakeUserUseBison.cmake  CMakeUserUseFlex.cmake  CPackBefore.cmake  DawgDevel.cmake  ExternalDep.cmake  FindGSL.cmake  FindGperftools.cmake  FindLibunwind.cmake  FindTestU01.cmake  FindYamlCpp.cmake  NSIS.template.in  NewPackage.cmake  cmake_ext_boost_bootstrap.cmake.in
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
boost.python/: CMakeLists.txt  Jamroot.jam  boostPython.fasta  build.sh  dawg.cpp  dawg.py  dawg_boost.py  hello.cpp  hello.py
config/: config.guess  config.sub  depcomp  install-sh  missing  rev.m4
contrib/: meson.build
contrib/CLI/: CLI11.hpp
contrib/random/: random.hpp
contrib/rapidyaml/: rapidyaml.hpp
correct_dist/: basicdna.fasta  segments.fasta
cython/: Akita.py  CMakeLists.txt  DawgBuilder.py  DawgBuilder.py.bak  DawgBuilder2.py  DawgDriver.py  DawgWalker.py  DawgWalker.py.backup  GoldenRetriever.py  PyDawg.cpp  PyDawg.pyx  akita.dawg  basic-dna-mdformat.dawg  build.sh  build_cython.sh  build_dawg_park.sh  cython_trickstring_aligned.fasta  dawg.cpp  dawg.hpp  dawg_cython.py  dawg_model_args_type_list.md  dawg_park.cpp  py_dawg_main.c  setup.py  time_akita.sh
dawg/: config.h  dawg.cpp  dawg.h  dawg.vcproj  eigen.cpp  evolve.cpp  indel.cpp  indel.h  lexer.cpp  lexer.fl  matrix.cpp  node.cpp  node.h  output.cpp  parser.b  parser.cpp  parser.h  rand.cpp  rand.h  subst.cpp  subst.h  tree.cpp  tree.h  var.cpp  var.h
dawgjs/: build_dawgjs.sh  bundle.js  dawg.html  dawg.js  dawg.js.mem  dawg_node_api.cpp  dawg_walker.js  js_build.sh
doc/: CMakeLists.txt  Makefile  Makefile.in  doxyfile.in  header.html.in  mainpage.hpp  meson.build
examples/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  aa.dawg  aa.yaml  basic-dna-2.dawg  basic-dna-2.yaml  basic-dna-zero-rate.dawg  basic-dna-zero-rate.yaml  basic-dna.dawg  basic-dna.yaml  basic-rna.dawg  codon.dawg  codon.yaml  dna-with-gaps.dawg  dna.dawg  dna.yaml  error.dawg  error.yaml  everything.yaml  example0.dawg  example0.fud  example0.poo  example1.dawg  example1.fud  example2.dawg  example2.fud  example3.dawg  example3.fud  example4.dawg  example4.fud  mitochondria.dawg  mitochondria.yaml  monster.yaml  multiple-models.dawg  multiple-models.yaml  pseudogene.dawg  pseudogene.yaml  recombination.dawg  (+6 more)
helpers/: bootstrap.sh  dawgvar.rb  txt2c.pl  wgcc-make-dist.sh
lib/: Makefile.am  malloc.c  realloc.c
profile_pydawg/: analyze_wrappers.sh  diff.sh  multiple-models_develop.fasta
py_driver/: DAWG.pyx  setup.py
py_wrapper/: DawgDriver.py  PyDawg.cpp  PyDawg.pyx  dawg.cpp  dawg.hpp  setup.py
qq/: build.sh  wood.h  wood_builder  wood_builder.cpp  wood_parse.h
releng/: build-rel-osx.sh  build-rel-unix.sh  build-rel-win.bat  build-rel-win32.bat  iX86-mingw32msvc.cmake  mingw32.cmake  releng.cmake
rtree/: ReadMe.txt  lexer.cpp  lexer.fl  parser.b  parser.cpp  parser.h  rtree.cpp  rtree.h  rtree.vcproj  stdafx.cpp
snout/: FileEditCtrl.cpp  FileEditCtrl.h  PJAImage.cpp  PJAImage.h  PJA_Icon.cpp  PJA_Icon.h  ReadMe.txt  Redir.cpp  Redir.h  resource.h  snout.cpp  snout.h  snout.rc  snout.vcproj  snoutDlg.cpp  snoutDlg.h  stdafx.cpp  stdafx.h
snout/res/: snout.manifest  snout.rc2
src/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  bitree.h  config.h  config.h.cmake  dawg.cc  dawg.cmds  dawg.cpp  dawg.desktop  dawg.h  dawg.rc  dawg.vcproj  dawg_app.h  dawg_node_program.cpp  dawgarg.xmh  dawgnotice.h  dawgtxt.h  dawgvar.h  eigen.cc  eigen.cpp  error.cpp  evolve.cpp  example1.fud  fenwick.h  indel.cc  indel.cpp  indel.h  indelmodel.cc  indelmodel.h  lexer.cpp  lexer.ll  malloc.c  malloc.cc  matrix.cc  matrix.cpp  matrix.h  meson.build  model.cc  (+28 more)
src/compat/: getopt.c
src/compat/unistd/: unistd.h
src/include/dawg/: bark.h  error.h  global.h  indel.h  log.h  ma.h  matic.h  mutt.h  output.h  pile.h  pile_parse.h  rate.h  resid.h  residue.h  root.h  sequence.h  subst.h  trick.h  trick_parse.h  utils.h  wood.h  wood_parse.h
src/include/dawg/details/: SFMT-sse2.h  SFMT.h  SFMTx.h  aliases.xmh  config.h.cmake  cumtree.h  dSFMT-params.h  dSFMT.h  dawgma.xmh  global.xmh  mutt.h  sfmt.h  shr3.h  shr3a.h  shr3b.h  subst_aa.h  subst_cod.h  subst_dna.h  xm.h  xorgen4096_32.h  xorgen4096_64.h  xorshift_32.h  xorshift_64.h
src/include/dawg/utils/: aliastable.h  foreach.h  specfunc.h  vecio.h  zeta.h
src/lib/: CMakeLists.txt  ma.cpp  matic.cpp  meson.build  models.cpp  mutt.cpp  output.cpp  parse.cpp  pile.cpp
src/lib/mutt/SFMT/: SFMT.c
src/lib/mutt/dSFMT/: dSFMT.c
swig/: CMakeLists.txt  dawg.cpp  dawg.i  dawg.py  dawg_interface.i  dawg_interface_wrap.c  dawg_swig.py  dawg_wrap.cpp  example.c  example.i  example_wrap.c  example_wrap.cxx  swigify.sh
test_dist/: diff.sh
tests/: CMakeLists.txt  CheckProcessTest.cmake  Makefile  Makefile.am  Makefile.in  example0.poo  speed-256-gamma.sh  speed-long-branch-gamma.sh  speed-long-branch-indels.sh  speed-long-branch.sh  speed-short-branch.sh  test0  test0.dawg  test0.fasta
tests/Dawg/: RunTest.cmake.in
tests/Unit/: CMakeLists.txt  boost_test_helper.h
tests/Unit/Dawg/: parse_test.cpp  testu01.cpp
tests/diff/: basicdna_develop.fasta  diff.sh  recombination_develop.fasta
tests/testu01/: testu01.cpp
utils/: bal256.R  cpp_encodeaa.pl  cpp_encodedna.pl  cpp_encodetri.pl  cpp_tripletdiff.pl
utils/paml2dawg/: paml2dawg.R
vs/: _stdint.h  config.h  dawg.cpp  dawg.ncb  dawg.sln  dawg.sln.old  dawg.vcproj  getopt.c  temp.fud
vs/test/: test.cpp  test.vcproj
